fixed typo in icmbuild.in, ready for 9.02.02

--- a/icmake/scripts/icmbuild.in
+++ b/icmake/scripts/icmbuild.in
@@ -397,7 +397,7 @@ void build_libraries()
 #endif
 
     if (DEFCOM == "program" && mainBase != "")
-        precompile(get_base(mainBase);
+        precompile(mainBase);
 #endif
 
     md(TMP_DIR);
